--- a/cmdtools/gateway/assemblies/qrcodeslice/work/site/web/unconsume.html
+++ b/cmdtools/gateway/assemblies/qrcodeslice/work/site/web/unconsume.html
@@ -110,7 +110,7 @@
             <label for="verifycode" class="ui-hidden-accessible">验证码：</label>
             <input type="text" name="verifycode" id="verifycode" placeholder="输入验证码" data-clear-btn="true">
         </form>
-        <p tips><label>提示:</label><span>该手机号还未注册，请下载<a android href="#">地微app(安卓版)</a>或者<a ios href="#">地微app(苹果版)</a>并注册账号，而后再试</span></p>
+        <p tips><label>提示:</label><span>该手机号还未注册，请下载并注册账号，而后再试。<a href="#">地微app<span></span></a></span></p>
     </div>
 </div>
 </body>
