--- a/cmdtools/gateway/assemblies/qrcodeslice/work/site/web/unconsume.html
+++ b/cmdtools/gateway/assemblies/qrcodeslice/work/site/web/unconsume.html
@@ -23,7 +23,7 @@
     <div data-role="main" class="ui-content">
         <div class="publisher">
             <img
-                    src="http://47.105.165.186:7100/avatars/340633c71cfa5ba2e17887e551b02363.jpeg?accessToken=3887076A0158168DFF3A7C63C11CFDB2"
+                    src="#"
                     class="ui-li-icon" data-theme="f">
             <ul>
                 <li name>狗丢儿</li>
@@ -110,7 +110,7 @@
             <label for="verifycode" class="ui-hidden-accessible">验证码：</label>
             <input type="text" name="verifycode" id="verifycode" placeholder="输入验证码" data-clear-btn="true">
         </form>
-        <p tips><label>提示:</label><span>该手机号还未注册，请下载并注册账号，而后再试。<a href="#">地微app<span></span></a></span></p>
+        <p tips><label>提示:</label><span>该手机号还未注册，请下载<a href="downloads.html">地微app</a>并注册账号，而后再试。</span></p>
     </div>
 </div>
 </body>
