--- a/cj.netos.qrcodeslice.program/site-src/site/web/consumed.html
+++ b/cj.netos.qrcodeslice.program/site-src/site/web/consumed.html
@@ -21,14 +21,14 @@
 
     <div data-role="main" class="ui-content">
         <div class="tips">
-            <span>本码片已被消费，请<a gotoPage href="#unconsumes-page">选择</a>其它码片</span>
+            <span>本码片已被领取，请<a gotoPage href="#unconsumes-page">选择</a>其它码片</span>
         </div>
     </div>
 
 </div>
 <div data-role="page" id="unconsumes-page">
     <div data-role="header">
-        <h1><a href="#home" class="ui-btn ui-btn-left ui-corner-all" data-rel="back">←</a>未消费码片</h1>
+        <h1><a href="#home" class="ui-btn ui-btn-left ui-corner-all" data-rel="back">←</a>未领取码片</h1>
     </div>
     <ul data-role="listview" data-theme="a" unconsume-ul>
         <li><a href="#">
