--- a/cj.netos.qrcodeslice.program/site-src/site/web/unconsume.html
+++ b/cj.netos.qrcodeslice.program/site-src/site/web/unconsume.html
@@ -110,7 +110,7 @@
             <label for="verifycode" class="ui-hidden-accessible">验证码：</label>
             <input type="text" name="verifycode" id="verifycode" placeholder="输入验证码" data-clear-btn="true">
         </form>
-        <p tips><label>提示:</label><span>该手机号还未注册，请下载<a href="downloads.html" target="_blank">地微app</a>并注册账号，而后再试。</span></p>
+        <p tips><label>提示:</label><span>该手机号还未注册，请下载<a href="downloads.html" target="_blank">地微app</a>并注册账号。注意：注册后一定要再次扫码并在此处输入已注册的手机号领取该码片，之后还可用此手机号领取任意码片，不限次数。</span></p>
     </div>
 </div>
 </body>
